src/main/java/org/example/videoclub/errors/UsuarioExistenteException.java
package org.example.videoclub.errors;

public class UsuarioExistenteException extends Exception{

    public UsuarioExistenteException(String message) {
        super(message);
    }

}
